# Cave drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'Cave drivers'
group_use     = [
    'm68000',
    'sh2',
    'sh4',
    'z80',
    'eeprom',
    'epic12',
    'nmk112',
    'rtc9701',
    'serflash',
    'watchdog',
    'msm6295',
    'samples',
    'ym2151',
    'ym2203',
    'ym2610',
    'ymz280b',
    'ymz770',
]
group_drivers = [
    'd_cv1k.cpp',
    'd_dodonpachi.cpp',
    'd_donpachi.cpp',
    'd_esprade.cpp',
    'd_feversos.cpp',
    'd_gaia.cpp',
    'd_guwange.cpp',
    'd_hotdogst.cpp',
    'd_korokoro.cpp',
    'd_mazinger.cpp',
    'd_metmqstr.cpp',
    'd_pwrinst2.cpp',
    'd_sailormn.cpp',
    'd_tjumpman.cpp',
    'd_uopoko.cpp',
]
group_srcs    = [
    'cave.cpp',
    'cave_palette.cpp',
    'cave_sprite.cpp',
    'cave_tile.cpp',
]
