# Cave drivers - self-describing driver group fragment.
# group_srcs: shared support compiled whenever any driver here is selected.
# drivers: per-driver component lists (seeded from the old group set;
#          refine individually, then verify with test_per_driver.py).
# Add a driver: drop d_<name>.cpp here and add a 'd_<name>.cpp': [...] entry.

group_desc = 'Cave drivers'
group_srcs = [
    'cave.cpp',
    'cave_palette.cpp',
    'cave_sprite.cpp',
    'cave_tile.cpp',
]
drivers = {
    'd_cv1k.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_dodonpachi.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_donpachi.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_esprade.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_feversos.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_gaia.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_guwange.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_hotdogst.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_korokoro.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_mazinger.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_metmqstr.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_pwrinst2.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_sailormn.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_tjumpman.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
    'd_uopoko.cpp': [
        'm68000',
        'sh2',
        'sh4',
        'z80',
        'eeprom',
        'epic12',
        'nmk112',
        'rtc9701',
        'serflash',
        'watchdog',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
        'ym2610',
        'ymz280b',
        'ymz770',
    ],
}
