# Fairchild Channel F drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'Fairchild Channel F drivers'
group_use     = [
    'f8',
    'dac',
]
group_drivers = [
    'd_channelf.cpp',
]
group_srcs    = []
