# ColecoVision drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'ColecoVision drivers'
group_use     = [
    'z80',
    'i2ceeprom',
    'tms9928a',
    'ay8910',
    'sn76496',
]
group_drivers = [
    'd_coleco.cpp',
]
group_srcs    = []
