# Capcom CPS-3 drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'Capcom CPS-3 drivers'
group_use     = [
    'sh2',
    'eeprom',
    'intelfsh',
    'dac',
]
group_drivers = [
    'd_cps3.cpp',
]
group_srcs    = [
    'cps3run.cpp',
    'cps3snd.cpp',
]
