# Data East drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'Data East drivers'
group_use     = [
    'arm',
    'h6280',
    'hd6309',
    'i8051',
    'i8x41',
    'm6502',
    'm68000',
    'm6809',
    'sh2',
    'tms32010',
    'z80',
    'bsmt2000',
    'decobsmt',
    'eeprom',
    'ay8910',
    'dac',
    'fmopl',
    'msm5205',
    'msm6295',
    'ym2151',
    'ym2203',
    'ym3526',
    'ym3812',
    'ymz280b',
]
group_drivers = [
    'd_actfancr.cpp',
    'd_backfire.cpp',
    'd_boogwing.cpp',
    'd_brkthru.cpp',
    'd_bwing.cpp',
    'd_cbuster.cpp',
    'd_chanbara.cpp',
    'd_cninja.cpp',
    'd_compgolf.cpp',
    'd_darkseal.cpp',
    'd_dassault.cpp',
    'd_dblewing.cpp',
    'd_dec0.cpp',
    'd_dec8.cpp',
    'd_deco156.cpp',
    'd_deco32.cpp',
    'd_decocass.cpp',
    'd_decomlc.cpp',
    'd_dietgogo.cpp',
    'd_dreambal.cpp',
    'd_funkyjet.cpp',
    'd_karnov.cpp',
    'd_kchamp.cpp',
    'd_lemmings.cpp',
    'd_liberate.cpp',
    'd_metlclsh.cpp',
    'd_pcktgal.cpp',
    'd_pktgaldx.cpp',
    'd_progolf.cpp',
    'd_rohga.cpp',
    'd_shootout.cpp',
    'd_sidepckt.cpp',
    'd_simpl156.cpp',
    'd_sshangha.cpp',
    'd_stadhero.cpp',
    'd_supbtime.cpp',
    'd_tumblep.cpp',
    'd_vaportra.cpp',
]
group_srcs    = [
    'deco146.cpp',
    'deco16ic.cpp',
    'decobac06.cpp',
]
