# Data East drivers - self-describing driver group fragment.
# group_srcs: shared support compiled whenever any driver here is selected.
# drivers: per-driver component lists (seeded from the old group set;
#          refine individually, then verify with test_per_driver.py).
# Add a driver: drop d_<name>.cpp here and add a 'd_<name>.cpp': [...] entry.

group_desc = 'Data East drivers'
group_srcs = [
    'deco146.cpp',
    'deco16ic.cpp',
    'decobac06.cpp',
]
drivers = {
    'd_actfancr.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_backfire.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_boogwing.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_brkthru.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_bwing.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_cbuster.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_chanbara.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_cninja.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_compgolf.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_darkseal.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_dassault.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_dblewing.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_dec0.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_dec8.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_deco156.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_deco32.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_decocass.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_decomlc.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_dietgogo.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_dreambal.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_funkyjet.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_karnov.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_kchamp.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_lemmings.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_liberate.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_metlclsh.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_pcktgal.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_pktgaldx.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_progolf.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_rohga.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_shootout.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_sidepckt.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_simpl156.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_sshangha.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_stadhero.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_supbtime.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_tumblep.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
    'd_vaportra.cpp': [
        'arm',
        'h6280',
        'hd6309',
        'i8051',
        'i8x41',
        'm6502',
        'm68000',
        'm6809',
        'sh2',
        'tms32010',
        'z80',
        'bsmt2000',
        'decobsmt',
        'eeprom',
        'ay8910',
        'dac',
        'fmopl',
        'msm5205',
        'msm6295',
        'ym2151',
        'ym2203',
        'ym3526',
        'ym3812',
        'ymz280b',
    ],
}
