# Galaxian hardware drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'Galaxian hardware drivers'
group_use     = [
    'm6809',
    's2650',
    'z80',
    '8255ppi',
    'resnet',
    'watchdog',
    'ay8910',
    'dac',
    'digitalk',
    'flt_rc',
    'samples',
    'sn76477',
    'sn76496',
]
group_drivers = [
    'd_galaxian.cpp',
]
group_srcs    = [
    'gal_gfx.cpp',
    'gal_run.cpp',
    'gal_sound.cpp',
    'gal_stars.cpp',
]
