# Irem drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'Irem drivers'
group_use     = [
    'i8039',
    'i8051',
    'm6800',
    'm68000',
    'm6809',
    'nec',
    'z80',
    'eeprom',
    'pic8259',
    'resnet',
    'watchdog',
    'ay8910',
    'dac',
    'iremga20',
    'msm5205',
    'msm6295',
    'samples',
    'ym2151',
    'ym2203',
]
group_drivers = [
    'd_m107.cpp',
    'd_m52.cpp',
    'd_m57.cpp',
    'd_m58.cpp',
    'd_m62.cpp',
    'd_m63.cpp',
    'd_m72.cpp',
    'd_m90.cpp',
    'd_m92.cpp',
    'd_vigilant.cpp',
]
group_srcs    = [
    'irem_cpu.cpp',
    'irem_sound.cpp',
]
