# Irem drivers - self-describing driver group fragment.
# group_srcs: shared support compiled whenever any driver here is selected.
# drivers: per-driver component lists (seeded from the old group set;
#          refine individually, then verify with test_per_driver.py).
# Add a driver: drop d_<name>.cpp here and add a 'd_<name>.cpp': [...] entry.

group_desc = 'Irem drivers'
group_srcs = [
    'irem_cpu.cpp',
    'irem_sound.cpp',
]
drivers = {
    'd_m107.cpp': [
        'i8039',
        'i8051',
        'm6800',
        'm68000',
        'm6809',
        'nec',
        'z80',
        'eeprom',
        'pic8259',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'iremga20',
        'msm5205',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
    ],
    'd_m52.cpp': [
        'i8039',
        'i8051',
        'm6800',
        'm68000',
        'm6809',
        'nec',
        'z80',
        'eeprom',
        'pic8259',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'iremga20',
        'msm5205',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
    ],
    'd_m57.cpp': [
        'i8039',
        'i8051',
        'm6800',
        'm68000',
        'm6809',
        'nec',
        'z80',
        'eeprom',
        'pic8259',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'iremga20',
        'msm5205',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
    ],
    'd_m58.cpp': [
        'i8039',
        'i8051',
        'm6800',
        'm68000',
        'm6809',
        'nec',
        'z80',
        'eeprom',
        'pic8259',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'iremga20',
        'msm5205',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
    ],
    'd_m62.cpp': [
        'i8039',
        'i8051',
        'm6800',
        'm68000',
        'm6809',
        'nec',
        'z80',
        'eeprom',
        'pic8259',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'iremga20',
        'msm5205',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
    ],
    'd_m63.cpp': [
        'i8039',
        'i8051',
        'm6800',
        'm68000',
        'm6809',
        'nec',
        'z80',
        'eeprom',
        'pic8259',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'iremga20',
        'msm5205',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
    ],
    'd_m72.cpp': [
        'i8039',
        'i8051',
        'm6800',
        'm68000',
        'm6809',
        'nec',
        'z80',
        'eeprom',
        'pic8259',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'iremga20',
        'msm5205',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
    ],
    'd_m90.cpp': [
        'i8039',
        'i8051',
        'm6800',
        'm68000',
        'm6809',
        'nec',
        'z80',
        'eeprom',
        'pic8259',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'iremga20',
        'msm5205',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
    ],
    'd_m92.cpp': [
        'i8039',
        'i8051',
        'm6800',
        'm68000',
        'm6809',
        'nec',
        'z80',
        'eeprom',
        'pic8259',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'iremga20',
        'msm5205',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
    ],
    'd_vigilant.cpp': [
        'i8039',
        'i8051',
        'm6800',
        'm68000',
        'm6809',
        'nec',
        'z80',
        'eeprom',
        'pic8259',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'iremga20',
        'msm5205',
        'msm6295',
        'samples',
        'ym2151',
        'ym2203',
    ],
}
